fix: letter-spacing 수정

--- a/asset/css/layout.css
+++ b/asset/css/layout.css
@@ -14,7 +14,7 @@
  .header { position: fixed; top: 0; left: 0; width: 100%; z-index: 999; transition: all 0.3s; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -ms-transition: all 0.3s; -o-transition: all 0.3s; } 
  .header.hide { opacity: 0; } 
  .header.white { background: #fff; } 
- .header .header-inner { display: flex; align-items: center; width: 100%; max-width: 1680px; height: 5em; margin: 0 auto; font-size: 20px; color: #fff; } 
+ .header .header-inner { display: flex; align-items: center; width: 100%; max-width: 1680px; height: 5em; margin: 0 auto; font-size: 20px; color: #fff; letter-spacing: -0.01em; } 
  .header.white .header-inner { color: #000; } 
  .header .header-inner .header-logo { width: 2.60em; height: auto; } 
  .header .header-inner .header-logo a { display: block; width: 100%; height: 100%; } 
@@ -34,7 +34,7 @@
  .header .header-inner .right-area .contact-area a:hover::after { width: 100%; } 
 
  /* footer */
- .footer { overflow: hidden; width: 100%; padding: 3.125% 6.25% 5.21%; background-color: #111; color: #ccc; } 
+ .footer { overflow: hidden; width: 100%; padding: 3.125% 6.25% 5.21%; background-color: #111; color: #ccc; letter-spacing: -0.025em; } 
  .footer .footer-inner { width: 100%; max-width: 1680px; margin: 0 auto; } 
  .footer .footer-top { display: flex; justify-content: space-between; padding-bottom: 80px; border-bottom: 1px solid rgba(102, 102, 102, 0.5); } 
  .footer .footer-top .left-area h4 { padding-bottom: 20px; font-size: 21px; font-weight: 600; text-transform: uppercase; } 
